--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ div[infobox] table {
             </div>
             
             
-                <a none href="https://t.me/funpedia">
+                <a none href="https://t.me/shlesnoy">
                 <img class="w-full h-40 mt-12" src="src/userdata/images/telegram.png" alt="Телеграм shlesnoy" title="Телеграм shlesnoy">
                 <p class="mt-1 text-xs opacity-50 tracking-wide uppercase">
                 Реклама
