--- a/3-Vera_V.html
+++ b/3-Vera_V.html
@@ -443,7 +443,7 @@ div[infobox] table {
                      </button>
                   </div>
                   <div class="mb-2">
-                     <a none href="u/1-ItsYarich.html">
+                     <a none href="">
                      <button badge class="flex" id="article_author">
                        <div class="flex">
                            <img src="https://mc-heads.net/avatar/divided__/64" class="rounded w-4 h-4 place-self-center mr-2">
