--- a/2-Timofey-Buter.html
+++ b/2-Timofey-Buter.html
@@ -485,7 +485,7 @@ div[infobox] table {
 </table></div>
                
                <div class="prose prose-neutral dark:prose-invert !text-base !font-serif py-4 reset-this" id="prose">
-                  <p><strong>Тимофей Бузин</strong> - ученица 9А класса.</p>
+                  <p><strong>Тимофей Бузин</strong> - ученик 9А класса.</p>
 <h2>Внешний вид</h2>
 <p><strong>Рост</strong>: 196-198 см. 
   Высокий, короткостриженный, голубой цвет глаз. Тимофею нравится тёмная одежда. Обожает головные уборы.</p>
