--- a/3-Vera_V.html
+++ b/3-Vera_V.html
@@ -489,7 +489,7 @@ div[infobox] table {
 </table></div>
                
                <div class="prose prose-neutral dark:prose-invert !text-base !font-serif py-4 reset-this" id="prose">
-                  <p><strong>Вера Вишневецкая</strong> - ученица 9А класса.</p>
+                  <p><strong>Вера Вишневецкая</strong> - ученица 9В класса.</p>
 <h2>Внешний вид</h2>
 <p><strong>Рост</strong>: 165 см. 
   Черный цвет на волосах Веры ненатуральный, натуральный - светло-русый. По ее словам имеет цыганские и армянские корни.</p>
